--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
 	"name": "typ01",
 	"version": "1.0.0",
 	"scripts": {
+		"build-css": "node-sass-chokidar --include-path ./client/src --include-path ./node_modules client/src/ -o client/src/",
+		"watch-css": "npm run build-css && node-sass-chokidar --include-path ./client/src --include-path ./node_modules client/src/ -o client/src/ --watch --recursive",
 		"client": "cd client && npm start",
 		"server": "node server.js",
-		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\" \"npm run watch-css\""
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
 		"express": "^4.16.2",
+		"node-sass": "^4.9.3",
+		"node-sass-chokidar": "^1.3.3",
 		"styled-components": "^3.4.5",
 		"watson-developer-cloud": "^3.9.1"
 	},
