--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"node-sass": "^4.9.3",
 		"node-sass-chokidar": "^1.3.3",
 		"styled-components": "^3.4.5",
-		"watson-developer-cloud": "^3.9.1"
+		"watson-developer-cloud": "^3.9.1",
+		"ejs":	"^2.4.2",
+		"morgan": "*",
+		"neo4j-driver": "*"
 	},
 	"devDependencies": {
 		"concurrently": "^3.5.0"
